# image-synthesis

./: Cargo.toml
src/: client.rs  constant.rs  erros.rs  lib.rs  models.rs  utils.rs
tests/: image_test.rs
